// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`services queries fetches the transaction types with a service name 1`] = `
Object {
  "body": Object {
    "aggs": Object {
      "types": Object {
        "terms": Object {
          "field": "transaction.type",
          "size": 100,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "service.name": "foo",
            },
          },
          Object {
            "terms": Object {
              "processor.event": Array [
                "transaction",
              ],
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
  "index": Array [
    "myIndex",
  ],
}
`;

exports[`services queries fetches the transaction types without service name 1`] = `
Object {
  "body": Object {
    "aggs": Object {
      "types": Object {
        "terms": Object {
          "field": "transaction.type",
          "size": 100,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "terms": Object {
              "processor.event": Array [
                "transaction",
              ],
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
        ],
      },
    },
    "size": 0,
  },
  "index": Array [
    "myIndex",
  ],
}
`;
